--- a/config.properties
+++ b/config.properties
@@ -1,16 +1,18 @@
 
 
-srcDbs=sqlite3
-srcConnStr=/home/robin/temp/foo.db
-srcUsername=
-srcPassword=
+source.dbs=sqlite
+#source.conn.string=/home/robin/temp/foo.db
+source.conn.string=jdbc:oracle:thin:@localhost:1521:EE
+source.username=iemdm
+source.password=iemdm
 
-trgDbs=sqlite3
-trgConnStr=/home/robin/temp/bar.db
-trgUsername=
-trgPassword=
+target.dbs=sqlite
+#target.conn.string=/home/robin/temp/bar.db
+target.conn.string=jdbc:oracle:thin:@localhost:1521:EE
+target.username=local_exp
+target.password=local_exp
 
 batchSize=2
 truncate=true
 
-tables=foo
+copy.tables=GLOBAL_USER
